updated templates with new plot

--- a/experimental/exp_zs_francoistemplate.ipynb
+++ b/experimental/exp_zs_francoistemplate.ipynb
@@ -785,6 +785,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if 'size_units' not in globals():\n",
+    "    size_units = 'fg C cell$^{-1}$'\n",
+    "\n",
+    "prop_labels = {\n",
+    "    'growth':'cell growth ({} h$^{{-1}}$)'.format(size_units),\n",
+    "    'division':'division rate (h$^{-1}$)',\n",
+    "    'respiration':'respiration + exudation\\n({} h$^{{-1}}$)'.format(size_units),\n",
+    "}\n",
+    "\n",
+    "for dataname in data:\n",
+    "    \n",
+    "    t = data[dataname]['dt']*np.arange(data[dataname]['nt'])/60.0\n",
+    "    dt_h = data[dataname]['dt']/60.0\n",
+    "    \n",
+    "    for model in mcmcs:\n",
+    "        fig, axs = plt.subplots(nrows=3, figsize=(14,6*3), sharex=True)\n",
+    "\n",
+    "        cell_count = mcmcs[model][dataname]['cell_count']\n",
+    "        \n",
+    "        for ax, prop in zip(axs, ('growth', 'division', 'respiration')):\n",
+    "\n",
+    "            if prop == 'growth':\n",
+    "                plotprop = mcmcs[model][dataname]['growth_vol_gain']/cell_count/dt_h\n",
+    "                x = t\n",
+    "            elif prop == 'division':\n",
+    "                plotprop = (np.log(cell_count[:,1:])-np.log(cell_count[:,:-1]))/(t[1:]-t[:-1])\n",
+    "                x = 0.5 * (t[1:] + t[:-1])\n",
+    "            elif prop == 'respiration':\n",
+    "                plotprop = mcmcs[model][dataname]['resp_vol_loss']/cell_count/dt_h\n",
+    "                x = t\n",
+    "            else:\n",
+    "                raise ValueError('Unknown prop \"{}\".'.format(prop))\n",
+    "            \n",
+    "            qq = np.percentile(plotprop, q=(5,25,50,75,95), axis=0)\n",
+    "\n",
+    "            sc = ax.fill_between(x, qq[0,:], qq[-1,:], alpha=0.25, color=colors_model[model])\n",
+    "            ax.fill_between(x, qq[1,:], qq[-2,:], alpha=0.5, facecolor=sc.get_facecolor()[0])\n",
+    "            ax.plot(x, qq[2,:], color=sc.get_facecolor()[0][:-1], lw=2)\n",
+    "\n",
+    "            if dataname == 'zinser':\n",
+    "                with nc4.Dataset('data/zinser_growthdivresp.nc') as nc:\n",
+    "                    ax.plot(nc[prop+'/time'][:], np.maximum(0.0, nc[prop+'/'+prop][:]), color='black', marker='o', lw=2)\n",
+    "            \n",
+    "            ax.set_ylim(bottom=0.0)\n",
+    "            ax.set_xlim((0, t[-1]))\n",
+    "            ax.set(ylabel=prop_labels[prop])\n",
+    "            ax.grid(True)\n",
+    "        \n",
+    "        axs[0].set_title(desc_model[model] + ' ' + desc[dataname])\n",
+    "        axs[-1].set(xticks = np.arange(0,t[-1],6), xlabel='time since start of experiment (h)')\n",
+    "        if axs[-1].get_ylim()[-1] < axs[0].get_ylim()[-1]:\n",
+    "            axs[-1].set_ylim(top=axs[0].get_ylim()[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "add_labels = True\n",
     "for dataname in data:\n",
     "    if 'zinser' in dataname:\n",
