--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -73,7 +73,6 @@
     "# load data\n",
     "datafiles = {\n",
     "    'seaflow':'data/SeaFlow_PSD_hourlyCOUNT_v3_regrid-25-8_day2.nc',\n",
-    "    #'zinser':'data/Zinser_SizeDist_calibrated-26-6.nc',\n",
     "    'zinser':'data/Zinser_SizeDist_logtransform-25-7.nc',\n",
     "}\n",
     "\n",
@@ -86,6 +85,8 @@
     "    'seaflow':'SeaFlow dataset',\n",
     "    'zinser':'Zinser dataset',    \n",
     "}\n",
+    "\n",
+    "size_units = 'fg C cell$^{-1}$'\n",
     "\n",
     "data_gridded = {}\n",
     "for dataname in datafiles:\n",
@@ -139,13 +140,13 @@
     "\n",
     "        ax = axs[1]\n",
     "        pc = ax.pcolormesh(data_gridded[dataname]['time'], v, data_gridded[dataname]['w_obs'], shading='auto')\n",
-    "        ax.set(ylabel='size ($\\mu$m$^3$)')\n",
+    "        ax.set(ylabel='size ({})'.format(size_units))\n",
     "        #ax.text(0.01, 0.95, desc[dataname], color='white', size=16, transform=ax.transAxes, ha='left', va='top')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='size class proportion')\n",
     "\n",
     "        ax = axs[2]\n",
     "        pc = ax.pcolormesh(data_gridded[dataname]['time'], v, data_gridded[dataname]['counts'], shading='auto')\n",
-    "        ax.set(ylabel='size ($\\mu$m$^3$)')\n",
+    "        ax.set(ylabel='size ({})'.format(size_units))\n",
     "        #ax.text(0.01, 0.95, desc[dataname], color='white', size=16, transform=ax.transAxes, ha='left', va='top')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='counts')\n",
     "    axs[-1].set_xlabel=('time (minutes)')\n",
@@ -265,14 +266,14 @@
     "\n",
     "        ax = axs[1]\n",
     "        pc = ax.pcolormesh(data[dataname]['t_obs'], v, data[dataname]['obs'], shading='auto')\n",
-    "        ax.set(ylabel='size ($\\mu$m$^3$)')\n",
+    "        ax.set(ylabel='size ({})'.format(size_units))\n",
     "        #ax.text(0.01, 0.95, desc[dataname], color='white', size=16, transform=ax.transAxes, ha='left', va='top')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='size class proportion')\n",
     "        ax.set_xlim(left=0.0)\n",
     "\n",
     "        ax = axs[2]\n",
     "        pc = ax.pcolormesh(data[dataname]['t_obs'], v, data[dataname]['obs_count'], shading='auto')\n",
-    "        ax.set(ylabel='size ($\\mu$m$^3$)')\n",
+    "        ax.set(ylabel='size ({})'.format(size_units))\n",
     "        #ax.text(0.01, 0.95, desc[dataname], color='white', size=16, transform=ax.transAxes, ha='left', va='top')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='counts')\n",
     "        ax.set_xlim(left=0.0)\n",
@@ -453,7 +454,7 @@
     "                print('{}: change in model code requires re-running model'.format(model))\n",
     "        else:\n",
     "            mcmcs[model] = {}\n",
-    "        while True:\n",
+    "        for itry in range(num_tries):\n",
     "            t0 = time.time()\n",
     "            mcmcs[model][dataname] = models[model].sampling(data=data[dataname], iter=2000, chains=num_chains)\n",
     "            sampling_time[model][dataname].append(time.time() - t0) # in seconds\n",
@@ -600,6 +601,66 @@
     "    ax.set_title('model misfit for '+desc[dataname], size=20)\n",
     "    ax.set_xticklabels(xticklabels)#, rotation=8)\n",
     "    ax.grid(axis='y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'size_units' not in globals():\n",
+    "    size_units = 'fg C cell$^{-1}$'\n",
+    "\n",
+    "prop_labels = {\n",
+    "    'growth':'cell growth ({} h$^{{-1}}$)'.format(size_units),\n",
+    "    'division':'division rate (h$^{-1}$)',\n",
+    "    'respiration':'respiration + exudation\\n({} h$^{{-1}}$)'.format(size_units),\n",
+    "}\n",
+    "\n",
+    "for dataname in data:\n",
+    "    \n",
+    "    t = data[dataname]['dt']*np.arange(data[dataname]['nt'])/60.0\n",
+    "    dt_h = data[dataname]['dt']/60.0\n",
+    "    \n",
+    "    for model in mcmcs:\n",
+    "        fig, axs = plt.subplots(nrows=3, figsize=(14,6*3), sharex=True)\n",
+    "\n",
+    "        cell_count = mcmcs[model][dataname]['cell_count']\n",
+    "        \n",
+    "        for ax, prop in zip(axs, ('growth', 'division', 'respiration')):\n",
+    "\n",
+    "            if prop == 'growth':\n",
+    "                plotprop = mcmcs[model][dataname]['growth_vol_gain']/cell_count/dt_h\n",
+    "                x = t\n",
+    "            elif prop == 'division':\n",
+    "                plotprop = (np.log(cell_count[:,1:])-np.log(cell_count[:,:-1]))/(t[1:]-t[:-1])\n",
+    "                x = 0.5 * (t[1:] + t[:-1])\n",
+    "            elif prop == 'respiration':\n",
+    "                plotprop = mcmcs[model][dataname]['resp_vol_loss']/cell_count/dt_h\n",
+    "                x = t\n",
+    "            else:\n",
+    "                raise ValueError('Unknown prop \"{}\".'.format(prop))\n",
+    "            \n",
+    "            qq = np.percentile(plotprop, q=(5,25,50,75,95), axis=0)\n",
+    "\n",
+    "            sc = ax.fill_between(x, qq[0,:], qq[-1,:], alpha=0.25, color=colors_model[model])\n",
+    "            ax.fill_between(x, qq[1,:], qq[-2,:], alpha=0.5, facecolor=sc.get_facecolor()[0])\n",
+    "            ax.plot(x, qq[2,:], color=sc.get_facecolor()[0][:-1], lw=2)\n",
+    "\n",
+    "            if dataname == 'zinser':\n",
+    "                with nc4.Dataset('data/zinser_growthdivresp.nc') as nc:\n",
+    "                    ax.plot(nc[prop+'/time'][:], np.maximum(0.0, nc[prop+'/'+prop][:]), color='black', marker='o', lw=2)\n",
+    "            \n",
+    "            ax.set_ylim(bottom=0.0)\n",
+    "            ax.set_xlim((0, t[-1]))\n",
+    "            ax.set(ylabel=prop_labels[prop])\n",
+    "            ax.grid(True)\n",
+    "        \n",
+    "        axs[0].set_title(desc_model[model] + ' ' + desc[dataname])\n",
+    "        axs[-1].set(xticks = np.arange(0,t[-1],6), xlabel='time since start of experiment (h)')\n",
+    "        if axs[-1].get_ylim()[-1] < axs[0].get_ylim()[-1]:\n",
+    "            axs[-1].set_ylim(top=axs[0].get_ylim()[-1])"
    ]
   },
   {
@@ -845,16 +906,16 @@
     "\n",
     "        ax = axs[1]\n",
     "        pc = ax.pcolormesh(data[dataname]['t_obs'], v, res['obs'],norm=norm, shading='auto')\n",
-    "        ax.set(ylabel='size ($\\mu$m$^3$)', title='size distribution data')\n",
+    "        ax.set(ylabel='size ({})'.format(size_units), title='size distribution data')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='size class proportion')\n",
     "\n",
     "        ax = axs[2]\n",
-    "        ax.set(ylabel='size ($\\mu$m$^3$)', title='size distribution model posterior')\n",
+    "        ax.set(ylabel='size ({})'.format(size_units), title='size distribution model posterior')\n",
     "        pc = ax.pcolormesh(data[dataname]['t_obs'], v, res_sum1,norm=norm, shading='auto')\n",
     "\n",
     "        ax = axs[3]\n",
     "        pc = ax.pcolormesh(data[dataname]['t_obs'], v, diff,norm=norm_diff, cmap='PiYG', shading='auto')\n",
-    "        ax.set(ylabel='size ($\\mu$m$^3$)', title='model - data misfit')\n",
+    "        ax.set(ylabel='size ({})'.format(size_units), title='model - data misfit')\n",
     "        add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='difference in size class proportion')\n",
     "        \n",
     "        qq = np.percentile(np.sum(mcmc[dataname]['mod_obspos'], axis=1), axis=0, q=(5,25,50,75,95))\n",
@@ -995,13 +1056,6 @@
     "                        if v in mcmcs[model][dataname].flatnames:\n",
     "                            ncg.variables[v][i,:] = mcmcs[model][dataname][v]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
