--- a/experimental/exp_zs_francoistemplate.ipynb
+++ b/experimental/exp_zs_francoistemplate.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -319,13 +319,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "desc_model = {\n",
     "    #'m1':'m1',\n",
-    "    'm2':'m2',\n",
+    "    #'m2':'m2',\n",
     "    #'m3':'m3',\n",
     "    'm4':'m4',\n",
     "    'm5':'m5',\n",
@@ -398,152 +398,96 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m4 NOW.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m2: unchanged code, not recompiling\n",
-      "m4: unchanged code, not recompiling\n",
-      "m5: unchanged code, not recompiling\n",
-      "m7: unchanged code, not recompiling\n",
-      "m12: unchanged code, not recompiling\n",
-      "m14: unchanged code, not recompiling\n"
+      "m4: compiling\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
-      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m5 NOW.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m2 (m2)\n",
-      "Inference for Stan model: m2.\n",
-      "4 chains, each with iter=2000; warmup=1000; thin=1; \n",
-      "post-warmup draws per chain=1000, total post-warmup draws=4000.\n",
-      "\n",
-      "                        mean se_mean      sd    2.5%     25%      50%     75%   97.5%  n_eff   Rhat\n",
-      "delta_max              40.22    0.25    9.56   25.29   33.21    38.68   45.88   62.72   1423    1.0\n",
-      "gamma_max               6.89    0.01    0.52    5.55    6.61     7.02    7.29    7.48   2391    1.0\n",
-      "rho_max                 3.71    0.03    2.17    0.14    1.83     3.72    5.54    7.32   7102    1.0\n",
-      "E_star                 479.4    1.03   51.59  358.07  449.04   485.12  515.61  565.48   2512    1.0\n",
-      "sigma                 163.09    0.12    9.58  144.69   156.5   162.96  169.64  182.15   6287    1.0\n",
-      "divrate                 1.07  7.0e-4    0.05    0.98    1.04     1.07    1.11    1.17   4901    1.0\n",
-      "lp__                  -1.4e6    0.47   18.18  -1.4e6  -1.4e6   -1.4e6  -1.4e6  -1.4e6   1515    1.0\n",
-      "\n",
-      "Samples were drawn using NUTS at Wed Oct  7 15:26:13 2020.\n",
-      "For each parameter, n_eff is a crude measure of effective sample size,\n",
-      "and Rhat is the potential scale reduction factor on split chains (at \n",
-      "convergence, Rhat=1).\n",
-      "\n"
+      "m5: compiling\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
-      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n",
-      "WARNING:pystan:1 of 4000 iterations ended with a divergence (0.025 %).\n",
-      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m7 NOW.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m4 (m4)\n",
-      "Inference for Stan model: m4.\n",
-      "4 chains, each with iter=2000; warmup=1000; thin=1; \n",
-      "post-warmup draws per chain=1000, total post-warmup draws=4000.\n",
-      "\n",
-      "                        mean se_mean      sd    2.5%     25%     50%     75%   97.5%  n_eff   Rhat\n",
-      "delta_max              59.48    0.11    7.63   43.33   54.31   60.11   65.58   71.28   4700    1.0\n",
-      "gamma_max                7.0  8.4e-3    0.43    5.94    6.78    7.12    7.34    7.48   2541    1.0\n",
-      "rho_max                 0.79  4.8e-4    0.03    0.73    0.77    0.79    0.81    0.85   4124    1.0\n",
-      "E_star                325.48     0.6   30.14  254.66  308.71  330.33  346.76  372.53   2553    1.0\n",
-      "sigma                 302.58    0.28   17.37  269.34   290.6  302.32  314.21   337.2   3986    1.0\n",
-      "divrate                 0.68  3.9e-4    0.03    0.63    0.66    0.68     0.7    0.73   4253    1.0\n",
-      "lp__                  -1.4e6    0.45   17.42  -1.4e6  -1.4e6  -1.4e6  -1.4e6  -1.4e6   1500    1.0\n",
-      "\n",
-      "Samples were drawn using NUTS at Wed Oct  7 15:55:59 2020.\n",
-      "For each parameter, n_eff is a crude measure of effective sample size,\n",
-      "and Rhat is the potential scale reduction factor on split chains (at \n",
-      "convergence, Rhat=1).\n",
-      "\n"
+      "m7: compiling\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
-      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n",
-      "WARNING:pystan:1000 of 4000 iterations saturated the maximum tree depth of 10 (25 %)\n",
-      "WARNING:pystan:Run again with max_treedepth larger than 10 to avoid saturation\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m12 NOW.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m5 (m5)\n",
-      "Inference for Stan model: m5.\n",
-      "4 chains, each with iter=2000; warmup=1000; thin=1; \n",
-      "post-warmup draws per chain=1000, total post-warmup draws=4000.\n",
-      "\n",
-      "                        mean se_mean      sd    2.5%     25%     50%     75%   97.5%  n_eff   Rhat\n",
-      "delta_max              38.46    0.24   10.01   24.06   30.98   36.66   44.01   64.19   1769    1.0\n",
-      "gamma_max               4.78    0.03    1.05    3.39    3.92    4.55    5.43    7.19   1722    1.0\n",
-      "rho_max                 1.01  6.2e-4    0.04    0.95    0.99    1.01    1.04    1.09   3184    1.0\n",
-      "E_star                220.33    1.97   82.14  107.63  153.98  204.15   272.6  403.47   1739    1.0\n",
-      "sigma                 466.01    0.39   25.98  416.45   448.5  465.72  483.22  516.29   4337    1.0\n",
-      "divrate                 0.46  3.2e-4    0.02    0.42    0.45    0.46    0.47     0.5   3838    1.0\n",
-      "lp__                  -1.4e6    0.46   17.97  -1.4e6  -1.4e6  -1.4e6  -1.4e6  -1.4e6   1532    1.0\n",
-      "\n",
-      "Samples were drawn using NUTS at Wed Oct  7 16:37:04 2020.\n",
-      "For each parameter, n_eff is a crude measure of effective sample size,\n",
-      "and Rhat is the potential scale reduction factor on split chains (at \n",
-      "convergence, Rhat=1).\n",
-      "\n"
+      "m12: compiling\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
-      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n",
-      "WARNING:pystan:4000 of 4000 iterations saturated the maximum tree depth of 10 (100 %)\n",
-      "WARNING:pystan:Run again with max_treedepth larger than 10 to avoid saturation\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m14 NOW.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m7: in try 1/3 found Rhat=8.337, trying again\n"
+      "m14: compiling\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:pystan:Maximum (flat) parameter count (1000) exceeded: skipping diagnostic tests for n_eff and Rhat.\n",
-      "To run all diagnostics call pystan.check_hmc_diagnostics(fit)\n",
-      "WARNING:pystan:4000 of 4000 iterations saturated the maximum tree depth of 10 (100 %)\n",
-      "WARNING:pystan:Run again with max_treedepth larger than 10 to avoid saturation\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "m7: in try 2/3 found Rhat=1.830, trying again\n"
+      "Process ForkPoolWorker-2:\n",
+      "Process ForkPoolWorker-7:\n",
+      "Process ForkPoolWorker-12:\n",
+      "Process ForkPoolWorker-5:\n",
+      "Process ForkPoolWorker-6:\n",
+      "Process ForkPoolWorker-11:\n",
+      "Process ForkPoolWorker-3:\n",
+      "Process ForkPoolWorker-8:\n",
+      "Process ForkPoolWorker-10:\n",
+      "Process ForkPoolWorker-1:\n",
+      "Process ForkPoolWorker-9:\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n"
      ]
     }
    ],
