--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -631,13 +631,13 @@
     "        for ax, prop in zip(axs, ('growth', 'division', 'respiration')):\n",
     "\n",
     "            if prop == 'growth':\n",
-    "                plotprop = mcmcs[model][dataname]['growth_vol_gain']/cell_count/dt_h\n",
+    "                plotprop = mcmcs[model][dataname]['growth_size_gain']/cell_count/dt_h\n",
     "                x = t\n",
     "            elif prop == 'division':\n",
     "                plotprop = (np.log(cell_count[:,1:])-np.log(cell_count[:,:-1]))/(t[1:]-t[:-1])\n",
     "                x = 0.5 * (t[1:] + t[:-1])\n",
     "            elif prop == 'respiration':\n",
-    "                plotprop = mcmcs[model][dataname]['resp_vol_loss']/cell_count/dt_h\n",
+    "                plotprop = mcmcs[model][dataname]['resp_size_loss']/cell_count/dt_h\n",
     "                x = t\n",
     "            else:\n",
     "                raise ValueError('Unknown prop \"{}\".'.format(prop))\n",
@@ -1074,7 +1074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
