renamed xi to beta

--- a/sizedep_formulations.ipynb
+++ b/sizedep_formulations.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -335,11 +335,11 @@
     "### size-dependent growth/respiration version 8 `respiv8`\n",
     "separate exponential size relationsships for growth and respiration\n",
     "\n",
-    "$\\hat{\\gamma}_i = dt \\cdot \\left(s_i(\\xi) \\cdot \\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right) - s_i(\\xi_r) \\hat{\\rho} \\right)$\n",
+    "$\\hat{\\gamma}_i = dt \\cdot \\left(s_i(\\beta) \\cdot \\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right) - s_i(\\beta_r) \\hat{\\rho} \\right)$\n",
     "\n",
     "where \n",
     "\n",
-    "$s_i(\\xi) = \\begin{cases} v_i^{\\xi} / v_m^{\\xi} & \\text{ for }\\xi \\ge 0 \\\\ v_i^{\\xi} / v_1^{\\xi} & \\text{ otherwise}\\end{cases}$\n",
+    "$s_i(\\beta) = \\begin{cases} v_i^{\\beta} / v_m^{\\beta} & \\text{ for }\\beta \\ge 0 \\\\ v_i^{\\beta} / v_1^{\\beta} & \\text{ otherwise}\\end{cases}$\n",
     "\n",
     "finally determine respiration and growth based on sign of $\\hat{\\gamma}_i$\n",
     "\n",
@@ -348,13 +348,13 @@
     "### size-dependent growth/respiration version 9 `respiv9`\n",
     "like in versions 1 and 4, growth and respiration can occur at the same time\n",
     "\n",
-    "$\\gamma_i = dt \\cdot s_i(\\xi) \\cdot \\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right)$\n",
+    "$\\gamma_i = dt \\cdot s_i(\\beta) \\cdot \\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right)$\n",
     "\n",
-    "$\\rho_i = dt \\cdot s_i(\\xi_r) \\cdot \\hat{\\rho}$\n",
+    "$\\rho_i = dt \\cdot s_i(\\beta_r) \\cdot \\hat{\\rho}$\n",
     "\n",
     "where \n",
     "\n",
-    "$s_i(\\xi) = \\begin{cases} v_i^{\\xi} / v_m^{\\xi} & \\text{ for }\\xi \\ge 0 \\\\ v_i^{\\xi} / v_1^{\\xi} & \\text{ otherwise}\\end{cases}$\n"
+    "$s_i(\\beta) = \\begin{cases} v_i^{\\beta} / v_m^{\\beta} & \\text{ for }\\beta \\ge 0 \\\\ v_i^{\\beta} / v_1^{\\beta} & \\text{ otherwise}\\end{cases}$\n"
    ]
   },
   {
