--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -309,6 +309,15 @@
     "    'm12':'m12',\n",
     "    #'m13':'m13',\n",
     "    'm14':'m14',\n",
+    "    'm3u':'m3u',\n",
+    "    'm6u':'m6u',\n",
+    "    'm7u':'m7u',\n",
+    "    'm8u':'m8u',\n",
+    "    'm9u':'m9u',\n",
+    "    'm11u':'m11u',\n",
+    "    'm12u':'m12u',\n",
+    "    'm13u':'m13u',\n",
+    "    'm14u':'m14u',\n",
     "}\n",
     "# preparing for some regular expression magic\n",
     "model_code_replacements = {\n",
@@ -326,6 +335,15 @@
     "    'm12':(),\n",
     "    'm13':(),\n",
     "    'm14':(),\n",
+    "    'm3u':(),\n",
+    "    'm6u':(),\n",
+    "    'm7u':(),\n",
+    "    'm8u':(),\n",
+    "    'm9u':(),\n",
+    "    'm11u':(),\n",
+    "    'm12u':(),\n",
+    "    'm13u':(),\n",
+    "    'm14u':(),\n",
     "}\n",
     "model_stan_key = {\n",
     "    'm1':'c1',\n",
@@ -342,6 +360,15 @@
     "    'm12':'c12',\n",
     "    'm13':'c13',\n",
     "    'm14':'c14',\n",
+    "    'm3u':'c3u',\n",
+    "    'm6u':'c6u',\n",
+    "    'm7u':'c7u',\n",
+    "    'm8u':'c8u',\n",
+    "    'm9u':'c9u',\n",
+    "    'm11u':'c11u',\n",
+    "    'm12u':'c12u',\n",
+    "    'm13u':'c13u',\n",
+    "    'm14u':'c14u',\n",
     "}\n",
     "stan_files = {\n",
     "    'c1':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_freedelta_normparam_trackgrowthvol_xval2.stan',\n",
@@ -358,6 +385,15 @@
     "    'c12':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv7_normparam_trackgrowthvol_xval2.stan',\n",
     "    'c13':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv6_normparam_trackgrowthvol_xval2.stan',\n",
     "    'c14':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv7_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c3u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2_gammaiv8_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c6u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respiv8_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c7u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respiv9_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c8u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respiv8_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c9u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respiv9_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c11u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv8_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c12u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv9_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c13u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv8_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c14u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv9_normparam_trackgrowthvol_xval2.stan',\n",
     "}"
    ]
   },
