--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -299,25 +299,31 @@
     "    'm2':'m2',\n",
     "    #'m3':'m3',\n",
     "    'm4':'m4',\n",
-    "    'm5':'m5',\n",
+    "    #'m5':'m5',\n",
     "    #'m6':'m6',\n",
     "    #'m7':'m7',\n",
     "    #'m8':'m8',\n",
     "    #'m9':'m9',\n",
     "    #'m10':'m10',\n",
     "    #'m11':'m11',\n",
-    "    'm12':'m12',\n",
+    "    #'m12':'m12',\n",
     "    #'m13':'m13',\n",
-    "    'm14':'m14',\n",
-    "    'm3u':'m3u',\n",
-    "    'm6u':'m6u',\n",
-    "    'm7u':'m7u',\n",
-    "    'm8u':'m8u',\n",
-    "    'm9u':'m9u',\n",
-    "    'm11u':'m11u',\n",
+    "    #'m14':'m14',\n",
+    "    #'m3u':'m3u',\n",
+    "    #'m6u':'m6u',\n",
+    "    #'m7u':'m7u',\n",
+    "    #'m8u':'m8u',\n",
+    "    #'m9u':'m9u',\n",
+    "    #'m11u':'m11u',\n",
     "    'm12u':'m12u',\n",
-    "    'm13u':'m13u',\n",
-    "    'm14u':'m14u',\n",
+    "    #'m13u':'m13u',\n",
+    "    #'m14u':'m14u',\n",
+    "    'm15':'m15',\n",
+    "    'm16':'m16',\n",
+    "    'm4s6':'m4 + spline6',\n",
+    "    'm12us6':'m12u + spline6',\n",
+    "    'm15s6':'m15 + spline6',\n",
+    "    'm16s6':'m16 + spline6',\n",
     "}\n",
     "# preparing for some regular expression magic\n",
     "model_code_replacements = {\n",
@@ -344,6 +350,12 @@
     "    'm12u':(),\n",
     "    'm13u':(),\n",
     "    'm14u':(),\n",
+    "    'm15':(),\n",
+    "    'm16':(),\n",
+    "    'm4s6':(('^( *int nknots = *)','6;'),),\n",
+    "    'm12us6':(('^( *int nknots = *)','6;'),),\n",
+    "    'm15s6':(('^( *int nknots = *)','6;'),),\n",
+    "    'm16s6':(('^( *int nknots = *)','6;'),),\n",
     "}\n",
     "model_stan_key = {\n",
     "    'm1':'c1',\n",
@@ -369,6 +381,12 @@
     "    'm12u':'c12u',\n",
     "    'm13u':'c13u',\n",
     "    'm14u':'c14u',\n",
+    "    'm15':'c15',\n",
+    "    'm16':'c16',\n",
+    "    'm4s6':'c4s',\n",
+    "    'm12us6':'c12us',\n",
+    "    'm15s6':'c15s',\n",
+    "    'm16s6':'c16s',\n",
     "}\n",
     "stan_files = {\n",
     "    'c1':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_freedelta_normparam_trackgrowthvol_xval2.stan',\n",
@@ -394,6 +412,12 @@
     "    'c12u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv9_normparam_trackgrowthvol_xval2.stan',\n",
     "    'c13u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv8_normparam_trackgrowthvol_xval2.stan',\n",
     "    'c14u':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv9_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c15':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_freegamma_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c16':'stancode_gallery3/matrixmodel_mlmultinom_estinilnorm2_monodelta2_freeresp_freegamma_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c4s':'../g3_timedep/matrixmodel_mlmultinom_estinilnorm2_monodelta2-timespline_respv1_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c12us':'../g3_timedep/matrixmodel_mlmultinom_estinilnorm2_monodelta2-timespline_resp_gammaiv9_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c15s':'../g3_timedep/matrixmodel_mlmultinom_estinilnorm2_monodelta2-timespline_resp_freegamma_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c16s':'../g3_timedep/matrixmodel_mlmultinom_estinilnorm2_monodelta2-timespline_freeresp_freegamma_normparam_trackgrowthvol_xval2.stan',\n",
     "}"
    ]
   },
@@ -1040,6 +1064,10 @@
     "                        dimensions['tau'] = mcmcs[model][dataname]['tau'].shape[1]\n",
     "                        dimensions_inv[dimensions['tau']] = 'tau'\n",
     "                        ncm.createDimension('tau', dimensions['tau'])\n",
+    "                    if 'tau_control[1]' in mcmcs[model][dataname].flatnames:\n",
+    "                        dimensions['tau_control'] = mcmcs[model][dataname]['tau_control'].shape[1]\n",
+    "                        dimensions_inv[dimensions['tau_control']] = 'tau_control'\n",
+    "                        ncm.createDimension('tau_control', dimensions['tau_control'])\n",
     "                    \n",
     "                    # write model description\n",
     "                    ncm.setncattr('description', desc_model[model])\n",
