Added write-out for figures

--- a/experimental/figures.ipynb
+++ b/experimental/figures.ipynb
@@ -933,7 +933,10 @@
     "mpl.rcParams['ytick.labelsize'] = 16\n",
     "\n",
     "# set the color for each model\n",
-    "colors_model = {model_name:mpl.cm.plasma_r((imodel+1)/9) for imodel,model_name in enumerate(['m2', 'm4', 'm12u', 'm15', 'm16', 'm4s6', 'm12us6', 'm15s6', 'm16s6'])}\n",
+    "mod_list = ['m2', 'm4', 'm12u', 'm15', 'm16', 'm4s6', 'm12us6', 'm15s6', 'm16s6']\n",
+    "colors_model = {model_name:mpl.cm.plasma_r((imodel+1)/(len(mod_list)))\n",
+    "                for imodel, model_name in enumerate(mod_list)}\n",
+    "# colors_model = {model_name:mpl.cm.tab10(imodel) for imodel, model_name in enumerate(mod_list)}\n",
     "# num_model = len(mcmcs)\n",
     "# if num_model <= 10:\n",
     "#     colors_model = {model:'C{}'.format(imodel) for imodel,model in enumerate(mcmcs)}\n",
@@ -973,7 +976,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1058,6 +1063,9 @@
     "            ax.set(ylabel=prop_labels[prop], ylim=ylim)\n",
     "            ax.set_xlabel('time (minutes)')\n",
     "            ax.text(0, 0.01, 'F', transform = ax.transAxes, color='firebrick', fontsize=fontsize)\n",
+    "    plt.savefig('figures/zinser_data.png', bbox_inches='tight')\n",
+    "    plt.show()\n",
+    "    plt.close()\n",
     "None"
    ]
   },
@@ -1200,7 +1208,10 @@
     "            ax.axvline(true_prop, color='tab:green', lw=3)\n",
     "        if dataname in reference_values and prop in reference_values[dataname]:\n",
     "            ax.axvline(reference_values[dataname][param], color='tab:green', lw=3)\n",
-    "        ax.text(0.02, 0.02, labels[prop], transform = ax.transAxes, color='firebrick', fontsize=fontsize)"
+    "        ax.text(0.02, 0.02, labels[prop], transform = ax.transAxes, color='firebrick', fontsize=fontsize)\n",
+    "    plt.savefig('figures/zinser_daily.png', bbox_inches='tight')\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -1330,7 +1341,10 @@
     "    ax.set(yticks=np.arange(0,num_mcmcs),\n",
     "           yticklabels=[desc_model[model].replace(',',',\\n') for model in temp_mcmcs],\n",
     "           xlabel='Division offset (h)')\n",
-    "    ax.text(0.94, 0.01, 'D', transform = ax.transAxes, color='firebrick', fontsize=fontsize)"
+    "    ax.text(0.94, 0.01, 'D', transform = ax.transAxes, color='firebrick', fontsize=fontsize)\n",
+    "    plt.savefig('figures/zinser_hourly.png', bbox_inches='tight')\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -1453,6 +1467,7 @@
     "ax.set_ylabel('Density')\n",
     "ax.text(0.005, 0.93, 'C', transform = ax.transAxes, color='firebrick', fontsize=fontsize)\n",
     "\n",
+    "plt.savefig('figures/division_vs_size.png', bbox_inches='tight')\n",
     "plt.show()\n",
     "plt.close()\n",
     "plt.subplots_adjust(wspace=0.2)  # set back to default\n",
@@ -1599,7 +1614,10 @@
     "            ax.axvline(true_prop, color='tab:green', lw=3)\n",
     "        if dataname in reference_values and prop in reference_values[dataname]:\n",
     "            ax.axvline(reference_values[dataname][param], color='tab:green', lw=3)\n",
-    "        ax.text(0.02, 0.02, labels[prop], transform = ax.transAxes, color='firebrick', fontsize=fontsize)"
+    "        ax.text(0.02, 0.02, labels[prop], transform = ax.transAxes, color='firebrick', fontsize=fontsize)\n",
+    "    plt.savefig('figures/zinser_daily_spline.png', bbox_inches='tight')\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -1725,7 +1743,10 @@
     "    ax.set(yticks=np.arange(0,num_mcmcs),\n",
     "           yticklabels=[desc_model[model].replace(',',',\\n') for model in temp_mcmcs],\n",
     "           xlabel='Division offset (h)')\n",
-    "    ax.text(0.94, 0.01, 'D', transform = ax.transAxes, color='firebrick', fontsize=fontsize)"
+    "    ax.text(0.94, 0.01, 'D', transform = ax.transAxes, color='firebrick', fontsize=fontsize)\n",
+    "    plt.savefig('figures/zinser_hourly_spline.png', bbox_inches='tight')\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -1800,6 +1821,9 @@
     "            #ax.text(0.01, 0.95, desc[dataname], color='white', size=16, transform=ax.transAxes, ha='left', va='top')\n",
     "            add_colorbar(ax, norm=pc.norm, cmap=pc.cmap, label='counts')\n",
     "            ax.text(0.005, 0.02, 'C', transform = ax.transAxes, color='white', fontsize=fontsize)\n",
+    "    plt.savefig('figures/seaflow_data.png', bbox_inches='tight')\n",
+    "    plt.show()\n",
+    "    plt.close()\n",
     "None"
    ]
   },
@@ -2152,7 +2176,10 @@
     "        ax.text(0.01, 0.92, labels[jj], transform = ax.transAxes, color='firebrick', fontsize=fontsize)\n",
     "        \n",
     "        ii += 1\n",
-    "        jj += 1"
+    "        jj += 1\n",
+    "    plt.savefig('figures/seaflow_model_fit.png', bbox_inches='tight')\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -2331,7 +2358,10 @@
     "                jj += 1\n",
     "                \n",
     "        if axs[-1, 1].get_ylim()[-1] < axs[1, 1].get_ylim()[-1]:\n",
-    "            axs[-1, 1].set_ylim(top=axs[1, 1].get_ylim()[-1])"
+    "            axs[-1, 1].set_ylim(top=axs[1, 1].get_ylim()[-1])\n",
+    "    plt.savefig('figures/seaflow_parameters.png', bbox_inches='tight')\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
