--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "# load data\n",
     "datafiles = {\n",
-    "    'seaflow':'data/SeaFlow_PSD_hourlyCOUNT_v3_regrid-25-8_day2.nc',\n",
+    "    'seaflow':'data/SeaFlow_PSD_hourlyCOUNT_v4_regrid-25-8_day2to5_1080min-offset.nc',\n",
     "    'zinser':'data/Zinser_SizeDist_logtransform-25-7.nc',\n",
     "}\n",
     "\n",
@@ -168,7 +168,7 @@
    "source": [
     "# prepare data for Stan model\n",
     "\n",
-    "seaflow_filter_par = False\n",
+    "seaflow_filter_par = True\n",
     "\n",
     "if 'data' not in globals():\n",
     "    data = {}\n",
@@ -191,7 +191,7 @@
     "            # median filter PAR\n",
     "            # see: medianfilter_par.ipynb\n",
     "            n = len(data_gridded[dataname]['PAR'])\n",
-    "            wsh = 30 # half of median filter window size; window size is 2*wsh+1\n",
+    "            wsh = 2 # half of median filter window size; window size is 2*wsh+1\n",
     "            par = np.array([np.median(data_gridded[dataname]['PAR'][max(0,i-wsh):min(n,i+wsh+1)]) for i in range(n)])\n",
     "        else:\n",
     "            par = data_gridded[dataname]['PAR']\n",
@@ -295,35 +295,35 @@
    "outputs": [],
    "source": [
     "desc_model = {\n",
-    "    #'m1':'m1',\n",
-    "    'm2':'m2',\n",
-    "    #'m3':'m3',\n",
-    "    'm4':'m4',\n",
-    "    #'m5':'m5',\n",
-    "    #'m6':'m6',\n",
-    "    #'m7':'m7',\n",
-    "    #'m8':'m8',\n",
-    "    #'m9':'m9',\n",
-    "    #'m10':'m10',\n",
-    "    #'m11':'m11',\n",
-    "    #'m12':'m12',\n",
-    "    #'m13':'m13',\n",
-    "    #'m14':'m14',\n",
-    "    #'m3u':'m3u',\n",
-    "    #'m6u':'m6u',\n",
-    "    #'m7u':'m7u',\n",
-    "    #'m8u':'m8u',\n",
-    "    #'m9u':'m9u',\n",
-    "    #'m11u':'m11u',\n",
-    "    'm12u':'m12u',\n",
-    "    #'m13u':'m13u',\n",
-    "    #'m14u':'m14u',\n",
-    "    'm15':'m15',\n",
-    "    'm16':'m16',\n",
-    "    'm4s6':'m4 + spline6',\n",
-    "    'm12us6':'m12u + spline6',\n",
-    "    'm15s6':'m15 + spline6',\n",
-    "    'm16s6':'m16 + spline6',\n",
+    "    #'m1':'m$_{bfx}$',\n",
+    "    'm2':'m$_{bmx}$',\n",
+    "    #'m3':'m$_{emx}$',\n",
+    "    'm4':'m$_{bmb}$',\n",
+    "    #'m5':'m$_{bmb–}$', # using en-dash here\n",
+    "    #'m6':'m$_{eme–}$', \n",
+    "    #'m7':'m$_{eme}$',\n",
+    "    #'m8':'m$_{ele–}$',\n",
+    "    #'m9':'m$_{ele}$',\n",
+    "    #'m10':'m$_{blb–}$',\n",
+    "    #'m11':'m$_{emb–}$',\n",
+    "    #'m12':'m$_{emb}$',\n",
+    "    #'m13':'m$_{elb–}$',\n",
+    "    #'m14':'m$_{elb}$',\n",
+    "    #'m3u':'m$_{pmx}$',\n",
+    "    #'m6u':'m$_{pmp–}$',\n",
+    "    #'m7u':'m$_{pmp}$',\n",
+    "    #'m8u':'m$_{plp–}$',\n",
+    "    #'m9u':'m$_{plp}$',\n",
+    "    #'m11u':'m$_{pmb–}$',\n",
+    "    'm12u':'m$_{pmb}$',\n",
+    "    #'m13u':'m$_{plb–}$',\n",
+    "    #'m14u':'m$_{plb}$',\n",
+    "    'm15':'m$_{fmb}$',\n",
+    "    'm16':'m$_{fmf}$',\n",
+    "    'm4s6':'m$_{btb}$',\n",
+    "    'm12us6':'m$_{ptb}$',\n",
+    "    'm15s6':'m$_{ftb}$',\n",
+    "    'm16s6':'m$_{ftf}$',\n",
     "}\n",
     "# preparing for some regular expression magic\n",
     "model_code_replacements = {\n",
@@ -1138,7 +1138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
