--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -570,7 +570,7 @@
    "source": [
     "param_desc = {'divrate':'daily division rate','E_star':'E*'}\n",
     "# add known values here\n",
-    "reference_values = {'zinser':{'divrate':0.69}}"
+    "reference_values = {'zinser':{'divrate':0.63}}"
    ]
   },
   {
@@ -1081,7 +1081,14 @@
     "                        \n",
     "                    for v in varnames_curr:\n",
     "                        if v in varnames:\n",
-    "                            dims = tuple(dimensions_inv[d] for d in mcmcs[model][dataname][v].shape)\n",
+    "                            try:\n",
+    "                                dims = tuple(dimensions_inv[d] for d in mcmcs[model][dataname][v].shape)\n",
+    "                            except:\n",
+    "                                for d in mcmcs[model][dataname][v].shape:\n",
+    "                                    if d not in dimensions_inv:\n",
+    "                                        logging.warning('Cannot find entry for \"{}\" in dimensions_inv.'.format(d))\n",
+    "                                logging.warning('Cannot save variable \"{}\" for model \"{}\".'.format(v, model))\n",
+    "                                continue\n",
     "                            ncm.createVariable(v, float, dims, zlib=True)\n",
     "                            ncm.variables[v][:] = mcmcs[model][dataname][v]\n",
     "                        else:\n",
