updated data file and stopped automatic creation of new datafile

--- a/data/propagate_uncertainty.ipynb
+++ b/data/propagate_uncertainty.ipynb
@@ -1198,130 +1198,133 @@
     "\n",
     "fname = 'zinser_abundance_division_loss.nc'\n",
     "\n",
-    "with nc4.Dataset(fname, 'w') as nc:\n",
-    "    # first save some global attributes\n",
-    "    nc.setncatts({\n",
-    "        'created_by':'propagate_uncertainty.ipynb',\n",
-    "        'correct_abundance_mean':int(correct_abundance_mean),\n",
-    "        'scale_error_with_signal':int(scale_error_with_signal),\n",
-    "        'loss_formulation':loss_formulation,\n",
-    "    })\n",
-    "    \n",
-    "    #\n",
-    "    # abundance\n",
-    "    #\n",
-    "    \n",
-    "    nc.createDimension('abundance_time', obs_time_hours.size)\n",
-    "    \n",
-    "    var = nc.createVariable('abundance_time', int, ('abundance_time',))\n",
-    "    var[:] = obs_time_hours\n",
-    "    var.units = 'hours since start of experiment'\n",
-    "    \n",
-    "    var = nc.createVariable('abundance', float, ('abundance_time',))\n",
-    "    var[:] = np.mean(abundance_sample, axis=0)\n",
-    "    var.long_name = 'cell abundance'\n",
-    "    var.units = 'cells ml$^{-1}$'\n",
-    "    \n",
-    "    var = nc.createVariable('abundance_sd', float, ('abundance_time',))\n",
-    "    var[:] = np.std(abundance_sample, axis=0)\n",
-    "    var.long_name = 'standard deviation of cell abundance'\n",
-    "    var.units = 'cells ml$^{-1}$'\n",
-    "    \n",
-    "    #\n",
-    "    # division\n",
-    "    #\n",
-    "    \n",
-    "    nc.createDimension('division_time', obs_time_division.size)\n",
-    "    \n",
-    "    var = nc.createVariable('division_time', int, ('division_time',))\n",
-    "    var[:] = obs_time_division.astype('int')\n",
-    "    var.units = 'hours since start of experiment'\n",
-    "    \n",
-    "    var = nc.createVariable('division', float, ('division_time',))\n",
-    "    var[:] = np.mean(division_sample, axis=0)\n",
-    "    var.long_name = 'cell division rate'\n",
-    "    var.units = 'h$^{-1}$'\n",
-    "    \n",
-    "    var = nc.createVariable('division_sd', float, ('division_time',))\n",
-    "    var[:] = np.std(division_sample, axis=0)\n",
-    "    var.long_name = 'standard deviation of cell division rate'\n",
-    "    var.units = 'h$^{-1}$'\n",
-    "    \n",
-    "    # daily\n",
-    "    \n",
-    "    var = nc.createVariable('dailydivision', float, fill_value=False)\n",
-    "    var[:] = np.mean(daily_division_sample)\n",
-    "    var.long_name = 'mean daily cell division rate'\n",
-    "    var.units = 'd$^{-1}$'\n",
-    "    \n",
-    "    var = nc.createVariable('dailydivision_sd', float, fill_value=False)\n",
-    "    var[:] = np.std(daily_division_sample)\n",
-    "    var.long_name = 'standard deviation of daily cell division rate'\n",
-    "    var.units = 'd$^{-1}$'\n",
-    "    \n",
-    "    #\n",
-    "    # carbon loss\n",
-    "    #\n",
-    "    \n",
-    "    nc.createDimension('carbonloss_time', obs_time_loss.size)\n",
-    "    \n",
-    "    var = nc.createVariable('carbonloss_time', int, ('carbonloss_time',))\n",
-    "    var[:] = obs_time_loss.astype('int')\n",
-    "    var.units = 'hours since start of experiment'\n",
-    "    \n",
-    "    var = nc.createVariable('carbonloss', float, ('carbonloss_time',))\n",
-    "    var[:] = np.mean(loss_sample_save, axis=0)\n",
-    "    var.long_name = 'cell carbon loss rate'\n",
-    "    var.units = 'fg C cell$^{-1}$ h$^{-1}$'\n",
-    "    \n",
-    "    var = nc.createVariable('carbonloss_sd', float, ('carbonloss_time',))\n",
-    "    var[:] = np.std(loss_sample_save, axis=0)\n",
-    "    var.long_name = 'standard deviation of cell carbon loss rate'\n",
-    "    var.units = 'fg C cell$^{-1}$ h$^{-1}$'\n",
-    "    \n",
-    "    # daily\n",
-    "    \n",
-    "    var = nc.createVariable('dailycarbonloss', float, fill_value=False)\n",
-    "    var[:] = np.mean(daily_intloss)\n",
-    "    var.long_name = 'mean daily cell carbon loss rate'\n",
-    "    var.units = 'fg C cell$^{-1}$ d$^{-1}$'\n",
-    "    \n",
-    "    var = nc.createVariable('dailycarbonloss_sd', float, fill_value=False)\n",
-    "    var[:] = np.std(daily_intloss)\n",
-    "    var.long_name = 'standard deviation of daily cell carbon loss rate'\n",
-    "    var.units = 'fg C cell$^{-1}$ d$^{-1}$'\n",
-    "    \n",
-    "    #\n",
-    "    # carbon fixation\n",
-    "    #\n",
-    "    \n",
-    "    nc.createDimension('carbonfix_time', obs_time_hours.size)\n",
-    "    \n",
-    "    var = nc.createVariable('carbonfix_time', int, ('carbonfix_time',))\n",
-    "    var[:] = obs_time_hours.astype('int')\n",
-    "    var.units = 'hours since start of experiment'\n",
-    "    \n",
-    "    var = nc.createVariable('carbonfix', float, ('carbonfix_time',))\n",
-    "    var[:] = np.mean(pp_sample, axis=0)\n",
-    "    var.long_name = 'cell carbon fixation rate'\n",
-    "    var.units = 'fg C cell$^{-1}$ h$^{-1}$'\n",
-    "    \n",
-    "    var = nc.createVariable('carbonfix_sd', float, ('carbonfix_time',))\n",
-    "    var[:] = np.std(pp_sample, axis=0)\n",
-    "    var.long_name = 'standard deviation of cell carbon fixation rate'\n",
-    "    var.units = 'fg C cell$^{-1}$ h$^{-1}$'\n",
-    "    \n",
-    "    # daily\n",
-    "    \n",
-    "    var = nc.createVariable('dailycarbonfix', float, fill_value=False)\n",
-    "    var[:] = np.mean(daily_intfix)\n",
-    "    var.long_name = 'mean daily cell carbon fixation rate'\n",
-    "    var.units = 'fg C cell$^{-1}$ d$^{-1}$'\n",
-    "    \n",
-    "    var = nc.createVariable('dailycarbonfix_sd', float, fill_value=False)\n",
-    "    var[:] = np.std(daily_intfix)\n",
-    "    var.long_name = 'standard deviation of daily cell carbon fixation rate'\n",
-    "    var.units = 'fg C cell$^{-1}$ d$^{-1}$'"
+    "save_data = False\n",
+    "\n",
+    "if save_data:\n",
+    "    with nc4.Dataset(fname, 'w') as nc:\n",
+    "        # first save some global attributes\n",
+    "        nc.setncatts({\n",
+    "            'created_by':'propagate_uncertainty.ipynb',\n",
+    "            'correct_abundance_mean':int(correct_abundance_mean),\n",
+    "            'scale_error_with_signal':int(scale_error_with_signal),\n",
+    "            'loss_formulation':loss_formulation,\n",
+    "        })\n",
+    "\n",
+    "        #\n",
+    "        # abundance\n",
+    "        #\n",
+    "\n",
+    "        nc.createDimension('abundance_time', obs_time_hours.size)\n",
+    "\n",
+    "        var = nc.createVariable('abundance_time', int, ('abundance_time',))\n",
+    "        var[:] = obs_time_hours\n",
+    "        var.units = 'hours since start of experiment'\n",
+    "\n",
+    "        var = nc.createVariable('abundance', float, ('abundance_time',))\n",
+    "        var[:] = np.mean(abundance_sample, axis=0)\n",
+    "        var.long_name = 'cell abundance'\n",
+    "        var.units = 'cells ml$^{-1}$'\n",
+    "\n",
+    "        var = nc.createVariable('abundance_sd', float, ('abundance_time',))\n",
+    "        var[:] = np.std(abundance_sample, axis=0)\n",
+    "        var.long_name = 'standard deviation of cell abundance'\n",
+    "        var.units = 'cells ml$^{-1}$'\n",
+    "\n",
+    "        #\n",
+    "        # division\n",
+    "        #\n",
+    "\n",
+    "        nc.createDimension('division_time', obs_time_division.size)\n",
+    "\n",
+    "        var = nc.createVariable('division_time', int, ('division_time',))\n",
+    "        var[:] = obs_time_division.astype('int')\n",
+    "        var.units = 'hours since start of experiment'\n",
+    "\n",
+    "        var = nc.createVariable('division', float, ('division_time',))\n",
+    "        var[:] = np.mean(division_sample, axis=0)\n",
+    "        var.long_name = 'cell division rate'\n",
+    "        var.units = 'h$^{-1}$'\n",
+    "\n",
+    "        var = nc.createVariable('division_sd', float, ('division_time',))\n",
+    "        var[:] = np.std(division_sample, axis=0)\n",
+    "        var.long_name = 'standard deviation of cell division rate'\n",
+    "        var.units = 'h$^{-1}$'\n",
+    "\n",
+    "        # daily\n",
+    "\n",
+    "        var = nc.createVariable('dailydivision', float, fill_value=False)\n",
+    "        var[:] = np.mean(daily_division_sample)\n",
+    "        var.long_name = 'mean daily cell division rate'\n",
+    "        var.units = 'd$^{-1}$'\n",
+    "\n",
+    "        var = nc.createVariable('dailydivision_sd', float, fill_value=False)\n",
+    "        var[:] = np.std(daily_division_sample)\n",
+    "        var.long_name = 'standard deviation of daily cell division rate'\n",
+    "        var.units = 'd$^{-1}$'\n",
+    "\n",
+    "        #\n",
+    "        # carbon loss\n",
+    "        #\n",
+    "\n",
+    "        nc.createDimension('carbonloss_time', obs_time_loss.size)\n",
+    "\n",
+    "        var = nc.createVariable('carbonloss_time', int, ('carbonloss_time',))\n",
+    "        var[:] = obs_time_loss.astype('int')\n",
+    "        var.units = 'hours since start of experiment'\n",
+    "\n",
+    "        var = nc.createVariable('carbonloss', float, ('carbonloss_time',))\n",
+    "        var[:] = np.mean(loss_sample_save, axis=0)\n",
+    "        var.long_name = 'cell carbon loss rate'\n",
+    "        var.units = 'fg C cell$^{-1}$ h$^{-1}$'\n",
+    "\n",
+    "        var = nc.createVariable('carbonloss_sd', float, ('carbonloss_time',))\n",
+    "        var[:] = np.std(loss_sample_save, axis=0)\n",
+    "        var.long_name = 'standard deviation of cell carbon loss rate'\n",
+    "        var.units = 'fg C cell$^{-1}$ h$^{-1}$'\n",
+    "\n",
+    "        # daily\n",
+    "\n",
+    "        var = nc.createVariable('dailycarbonloss', float, fill_value=False)\n",
+    "        var[:] = np.mean(daily_intloss)\n",
+    "        var.long_name = 'mean daily cell carbon loss rate'\n",
+    "        var.units = 'fg C cell$^{-1}$ d$^{-1}$'\n",
+    "\n",
+    "        var = nc.createVariable('dailycarbonloss_sd', float, fill_value=False)\n",
+    "        var[:] = np.std(daily_intloss)\n",
+    "        var.long_name = 'standard deviation of daily cell carbon loss rate'\n",
+    "        var.units = 'fg C cell$^{-1}$ d$^{-1}$'\n",
+    "\n",
+    "        #\n",
+    "        # carbon fixation\n",
+    "        #\n",
+    "\n",
+    "        nc.createDimension('carbonfix_time', obs_time_hours.size)\n",
+    "\n",
+    "        var = nc.createVariable('carbonfix_time', int, ('carbonfix_time',))\n",
+    "        var[:] = obs_time_hours.astype('int')\n",
+    "        var.units = 'hours since start of experiment'\n",
+    "\n",
+    "        var = nc.createVariable('carbonfix', float, ('carbonfix_time',))\n",
+    "        var[:] = np.mean(pp_sample, axis=0)\n",
+    "        var.long_name = 'cell carbon fixation rate'\n",
+    "        var.units = 'fg C cell$^{-1}$ h$^{-1}$'\n",
+    "\n",
+    "        var = nc.createVariable('carbonfix_sd', float, ('carbonfix_time',))\n",
+    "        var[:] = np.std(pp_sample, axis=0)\n",
+    "        var.long_name = 'standard deviation of cell carbon fixation rate'\n",
+    "        var.units = 'fg C cell$^{-1}$ h$^{-1}$'\n",
+    "\n",
+    "        # daily\n",
+    "\n",
+    "        var = nc.createVariable('dailycarbonfix', float, fill_value=False)\n",
+    "        var[:] = np.mean(daily_intfix)\n",
+    "        var.long_name = 'mean daily cell carbon fixation rate'\n",
+    "        var.units = 'fg C cell$^{-1}$ d$^{-1}$'\n",
+    "\n",
+    "        var = nc.createVariable('dailycarbonfix_sd', float, fill_value=False)\n",
+    "        var[:] = np.std(daily_intfix)\n",
+    "        var.long_name = 'standard deviation of daily cell carbon fixation rate'\n",
+    "        var.units = 'fg C cell$^{-1}$ d$^{-1}$'"
    ]
   },
   {
