--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -1025,6 +1025,7 @@
     "                    'time':int(data[dataname]['nt']),\n",
     "                    'sizeclass':int(data[dataname]['m']),\n",
     "                    'm_minus_j_plus_1':int(data[dataname]['m']-data[dataname]['delta_v_inv']),\n",
+    "                    'm_minus_1':int(data[dataname]['m']-1),\n",
     "                }\n",
     "                dimensions_inv = {v:k for k,v in dimensions.items()}\n",
     "                for d in dimensions:\n",
